<package>
  <name>rcprg_planner_msgs</name>
  <version>1.11.3</version>
  <description>RCPRG Planner service definitions.</description>
  <author email="dawid.seredynski@pw.edu.pl">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@pw.edu.pl">Dawid Seredynski</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rcprg_planner_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
